Correcting setminus errors

--- a/1.MP2I/1.Maths/03.Algebra_cheat_sheet/Algebra_CheatSheet.tex
+++ b/1.MP2I/1.Maths/03.Algebra_cheat_sheet/Algebra_CheatSheet.tex
@@ -4,7 +4,7 @@
 %------------------------------------------------------------------------
 %
 % Author                :   Lasercata
-% Last modification     :   2022.01.20
+% Last modification     :   2023.04.19
 %
 %------------------------------------------------------------------------
 
@@ -329,7 +329,7 @@
         \begin{indt}{\subsection{Définition (sous-groupe)}}
             \begin{indt}{$H$ est un sous-groupe de $(G, *)$ si :}
                 \begin{tabular}{ll}
-                    $\bullet$ $H \in \mathcal P(G) \backslash \varnothing$
+                    $\bullet$ $H \in \mathcal P(G) \setminus \left\{\varnothing\right\}$
                     \vspace{6pt}
                     \\
                     $\bullet$ $\forall (x, y) \in H^2,\ x * y \in H$
