--- a/1.MP2I/1.Maths/05.Sequential_characterisation/Sequential_characterisation.tex
+++ b/1.MP2I/1.Maths/05.Sequential_characterisation/Sequential_characterisation.tex
@@ -4,7 +4,7 @@
 %------------------------------------------------------------------------
 %
 % Author                :   Lasercata
-% Last modification     :   2022.02.27
+% Last modification     :   2023.04.19
 %
 %------------------------------------------------------------------------
 
@@ -240,7 +240,7 @@
     
     \begin{indt}{\section{Bornes inférieures, supérieures}}
         
-        Soit $A \in \mathcal P(\R) \setminus \varnothing.$
+        Soit $A \in \mathcal P(\R) \setminus \set \varnothing.$
         
         (1) Soit $M$ un majorant de $A$, \textit{i.e}, $\forall x \in A, x \le M$. On a alors :
             \[ M = \sup(A) \ssi \exists (u_n)_{n \in \N} \subset A\ |\ u_n \tendsto{n \to +\infty} M \]
