--- a/1.MP2I/1.Maths/08.Vectorial_space_cheat_sheet/Vectorial_space_CheatSheet.tex
+++ b/1.MP2I/1.Maths/08.Vectorial_space_cheat_sheet/Vectorial_space_CheatSheet.tex
@@ -4,7 +4,7 @@
 %------------------------------------------------------------------------
 %
 % Author                :   Lasercata
-% Last modification     :   2022.08.24
+% Last modification     :   2023.04.19
 %
 %------------------------------------------------------------------------
 
@@ -348,7 +348,7 @@
             Soit $(E, +, \cdot)$ un $K$-espace vectoriel.
             
             \begin{indt}{L'ensemble $F$ est un \textit{sous-espace vectoriel} de $E$ si :}
-                (1) $F \in \mathcal P(E) \setminus \varnothing$
+                (1) $F \in \mathcal P(E) \setminus \set \varnothing$
                 
                 (2) $\forall (\lambda, x) \in K \times F,\ \lambda x \in F$
                 
@@ -367,7 +367,7 @@
             
             \vspace{6pt}
             
-            $\bullet$ Soit $F \in \mathcal P(E) \setminus \varnothing$.
+            $\bullet$ Soit $F \in \mathcal P(E) \setminus \set \varnothing$.
             
             Alors $F$ est un sous-espace vectoriel de $E$ $\ssi$ $F$ est un sous-groupe de $(E, +)$ tel que $\forall (\lambda, x) \in K \times F,\ \lambda \cdot x \in F$ (stable par multiplication par les scalaires).
             
@@ -381,7 +381,7 @@
         \vspace{12pt}
         
         \begin{indt}{\subsection{Caractérisation d'un sous-espace vectoriel}}
-            Soit $(E, +, \cdot)$ un $K$-espace vectoriel, et $F \in \mathcal P(E) \setminus \varnothing$.
+            Soit $(E, +, \cdot)$ un $K$-espace vectoriel, et $F \in \mathcal P(E) \setminus \set \varnothing$.
             
             \vspace{6pt}
             
